Completes admin genre functionality

--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,3 +1,3 @@
-<h4 class="align-center">Edit Genre <%= @genre.title %></h4>
+<h4 class="center-align">Edit Genre <%= @genre.title %></h4>
 
 <%= render partial: 'form' %>
