--- a/app/views/admin/genres/_form.html.erb
+++ b/app/views/admin/genres/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for [:admin, @genre] do |f| %>
   <%= f.label :title %>
-  <%= f.text_field :title %>
+  <%= f.text_field :title, autofocus: true %>
 
   <%= f.submit %>
 <% end %>
