--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,8 @@
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li><%= link_to 'Shows', admin_shows_path %></li>
+          <li><%= link_to 'Genres', '#' %></li>
           <li><a href="badges.html">Ratings</a></li>
-          <li><a href="collapsible.html">Genres</a></li>
           <li><a href="mobile.html">Tags</a></li>
           <li>&emsp;&emsp;&emsp;</li>
           <% if current_user %>
@@ -41,8 +41,8 @@
           <ul class="tabs tabs-transparent">
             <li class="tab">Admin Tools</li>
             <li class="tab"><%= link_to 'Shows', admin_shows_path %></li>
+            <li class="tab"><%= link_to 'Genres', admin_genres_path %></li>
             <li class="tab"><a href="#">Ratings</a></li>
-            <li class="tab"><a href="#">Genres</a></li>
             <li class="tab"><a href="#">Tags</a></li>
           </ul>
         </div>
