Add feature spec and passing for adding multiple genres to shows

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,8 +1,13 @@
 select {
- display: block;
- margin-bottom: 10px;
+  display: block;
+  margin-bottom: 10px;
 }
 
 .table-fit {
   width: 1px;
+}
+
+#genre-box {
+  width: 350px;
+  height: 100px;
 }
