--- a/app/views/admin/shows/show.html.erb
+++ b/app/views/admin/shows/show.html.erb
@@ -9,3 +9,24 @@
       class: 'waves-effect waves-light btn-small'
   %>
 </h5>
+
+<div class="show-genres">
+  <h5><strong>Genres:</strong>
+    <% @show.genres.each do |genre| %>
+      <%= "#{genre.title}" %>
+    <% end %>
+  </h5>
+</div>
+
+<h5>Edit Genres for <%= @show.title %></h5>
+<%= form_for [:admin, @show, @new_show_genres] do |f| %>
+  <%= f.label :title %>
+  <%=
+     f.select :id,
+     @genres.map {|genre| [genre.title, genre.id]},
+     {},
+     { :multiple => true, size: 10, id: 'genre-box' }
+  %>
+
+  <%= f.submit 'Update Genres' %>
+<% end %>
