add link from admin show page to genre show page

--- a/app/views/admin/shows/show.html.erb
+++ b/app/views/admin/shows/show.html.erb
@@ -14,7 +14,7 @@
   <h5><strong>Genres:</strong>
     <% @show.genres.each do |genre| %>
       <div class="chip">
-        <%= "#{genre.title}" %>
+        <%= link_to genre.title, admin_genre_path(genre) %>
       </div>
     <% end %>
   </h5>
