--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -7,6 +7,11 @@ select {
   width: 1px;
 }
 
+.small-container {
+  width: 40%;
+  margin: auto;
+}
+
 #genre-box {
   width: 350px;
   height: 100px;
