--- a/app/views/admin/genres/show.html.erb
+++ b/app/views/admin/genres/show.html.erb
@@ -9,3 +9,10 @@
       class: 'waves-effect waves-light btn-small'
   %>
 </h5>
+
+<ul class="collection with-header small-container">
+  <li class="collection-header"><h6>Shows in this Genre</h6></li>
+  <% @genre.shows.each do |show| %>
+    <%= link_to show.title, admin_show_path(show), class: "collection-item" %>
+  <% end %>
+</ul>
