--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -1,21 +1,19 @@
 <h4 class="center-align"><%= @show.title %> (<%= @show.year %>)</h4>
-<div class="show-genres">
-  <h5><strong>Genres:</strong>
-    <% @show.genres.each do |genre| %>
-      <div class="chip">
-        <%= link_to genre.title, admin_genre_path(genre) %>
-      </div>
-    <% end %>
-  </h5>
+<div class="show-genres center-align">
+  <% @show.genres.each do |genre| %>
+    <div class="chip">
+      <%= link_to genre.title, admin_genre_path(genre) %>
+    </div>
+  <% end %>
 </div>
 
 <% if current_user && show_rated?(@show, current_user) %>
     <h5>Submit Rating for <%= @show.title %></h5>
     <%= form_for [@show, :user, @rating] do |f| %>
-      <%= f.label :score %>
+      <%= f.label :score, 'Show Review Score' %>
       <%= f.select :score, options_for_select(1..10) %>
 
-      <%= f.label :bingecount %>
+      <%= f.label :bingecount, 'Episodes Watched Per Session' %>
       <%= f.select :bingecount, options_for_select(1..20) %>
 
       <%= f.submit 'Submit Rating' %>
