--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,8 @@
         <%= link_to 'BingeHelper', root_path, class: 'brand-logo' %>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          <li><%= link_to 'Shows', admin_shows_path %></li>
-          <li><%= link_to 'Genres', '#' %></li>
+          <li><%= link_to 'Shows', shows_path %></li>
+          <li><%= link_to 'Genres', genres_path %></li>
           <li><a href="badges.html">Ratings</a></li>
           <li>&emsp;&emsp;&emsp;</li>
           <% if current_user %>
