--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -9,6 +9,9 @@
 
 <div class="row">
   <div class="col s6">
+    <%= image_tag("shows/#{@show.image}", class: "responsive-img poster-img right" ) %>
+  </div>
+  <div class="col s6">
     <% if current_user && show_rated?(@show, current_user) %>
         <h5>Submit Rating for <%= @show.title %></h5>
         <%= form_for [@show, :user, @rating] do |f| %>
@@ -22,28 +25,31 @@
         <% end %>
       <% elsif current_user %>
         <div id="stats-user-<%= current_user.id %>">
-          <p>Your Review Score: <%= current_user.score(@show) %></p>
-          <p>Your BingeCount: <%= current_user.bingecount(@show) %></p>
-          <p>Your BingeScore: <%= current_user.bingescore(@show) %></p>
-          <p>
-            <%=
-                link_to 'Delete Rating',
-                show_user_rating_path(@show, current_user_rating(@show, current_user)),
-                method: :delete,
-                data: { confirm: "Delete rating for #{@show.title}?" }
-            %>
-         </p>
+          <p class="flow-text">
+            Your Review Score: <%= current_user.score(@show) %><br />
+            Your BingeCount: <%= current_user.bingecount(@show) %><br />
+            Your BingeScore: <%= current_user.bingescore(@show) %><br />
+
+              <%=
+                  link_to 'Delete Rating',
+                  show_user_rating_path(@show, current_user_rating(@show, current_user)),
+                  method: :delete,
+                  data: { confirm: "Delete rating for #{@show.title}?" }
+              %>
+          </p>
         </div>
     <% end %>
   </div>
   <div class="col s6">
     <% if @show.ratings.empty? %>
-      <p>No rating information for this show yet.</p>
+      <p class="flow-text">No rating information for this show yet.</p>
     <% else %>
       <div id="stats-all">
-        <p>Average Review Score: <%= @show.avg_score %></p>
-        <p>Average BingeCount: <%= @show.avg_bingecount %></p>
-        <p>BingeScore: <%= @show.bingescore %></p>
+        <p class="flow-text">
+          Average Review Score: <%= @show.avg_score %><br />
+          Average BingeCount: <%= @show.avg_bingecount %><br />
+          BingeScore: <%= @show.bingescore %>
+        </p>
       </div>
     <% end %>
   </div>
