--- a/app/views/admin/shows/_form.html.erb
+++ b/app/views/admin/shows/_form.html.erb
@@ -5,7 +5,7 @@
   <%= f.label  :year %>
   <%= f.select :year, (Date.today.year-65)..(Date.today.year), selected: @show.year || Time.current.year %>
 
-  <%= f.label :runtime %>
+  <%= f.label      :runtime, 'Episode Runtime (in minutes)' %>
   <%= f.text_field :runtime %>
 
   <%= f.submit class: 'btn waves-effect waves-light' %>
