--- a/app/views/admin/shows/show.html.erb
+++ b/app/views/admin/shows/show.html.erb
@@ -7,7 +7,7 @@
   <% end %>
 </div>
 <div class="center-align">
-  <p class="flow-text">Episode Runtime: <%= @show.runtime %></p>
+  <p class="flow-text">Episode Runtime: <%= @show.runtime %> minutes</p>
 </div>
 <h5 class="center-align">
   <%= link_to 'Edit', edit_admin_show_path(@show), class: 'waves-effect waves-light btn-small' %>
