--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,9 @@
         <ul class="right hide-on-med-and-down">
           <li><%= link_to 'Shows', shows_path %></li>
           <li><%= link_to 'Genres', genres_path %></li>
-          <li><a href="badges.html">Ratings</a></li>
           <li>&emsp;&emsp;&emsp;</li>
           <% if current_user %>
+            <li><%= link_to 'My Ratings', user_path(current_user) %></a></li>
             <li><%= link_to current_user.email, settings_user_path(current_user), id: 'desktop-user-link' %></li>
             <li><%= link_to 'Log Out', logout_path, method: :delete, id: 'desktop-log-out' %></li>
           <% else %>
