--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -23,7 +23,7 @@
           <%= f.label  :bingecount, "#{@show.title} Episodes Watched Per Session" %>
           <%= f.select :bingecount, options_for_select((1..20).map { |n| ["#{n} episodes", n] }) %>
 
-          <%= f.submit 'Submit Rating' %>
+          <%= f.submit 'Submit Rating', class: 'btn waves-effect waves-light' %>
         <% end %>
       <% elsif current_user %>
         <div id="stats-user-<%= current_user.id %>">
@@ -35,7 +35,8 @@
                 link_to 'Delete Rating',
                 show_user_rating_path(@show, current_user_rating(@show, current_user)),
                 method: :delete,
-                data: { confirm: "Delete rating for #{@show.title}?" }
+                data: { confirm: "Delete rating for #{@show.title}?" },
+                class: 'btn waves-effect waves-light'
             %>
           </p>
         </div>
