--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -14,7 +14,22 @@
     <%= image_tag("shows/#{@show.image}", class: "responsive-img poster-img right hoverable" ) %>
   </div>
   <div class="col s6">
-    <% if current_user && show_rated?(@show, current_user) %>
+    <% if current_user && current_user.show_rated?(@show) %>
+      <div id="stats-user-<%= current_user.id %>">
+        <p class="flow-text">
+          Your Review Score: <%= current_user.score(@show) %>/10<br />
+          Your BingeCount: <%= current_user.bingecount(@show) %> episodes<br />
+          Your BingeScore: <%= current_user.bingescore(@show) %><br />
+          <%=
+              link_to 'Delete Rating',
+              show_user_rating_path(@show, current_user.current_user_rating(@show)),
+              method: :delete,
+              data: { confirm: "Delete rating for #{@show.title}?" },
+              class: 'btn waves-effect waves-light'
+          %>
+        </p>
+      </div>
+      <% elsif current_user %>
         <h5>Submit Rating for <%= @show.title %></h5>
         <%= form_for [@show, :user, @rating] do |f| %>
           <%= f.label  :score, "Your Review For #{@show.title}" %>
@@ -25,21 +40,6 @@
 
           <%= f.submit 'Submit Rating', class: 'btn waves-effect waves-light' %>
         <% end %>
-      <% elsif current_user %>
-        <div id="stats-user-<%= current_user.id %>">
-          <p class="flow-text">
-            Your Review Score: <%= current_user.score(@show) %>/10<br />
-            Your BingeCount: <%= current_user.bingecount(@show) %> episodes<br />
-            Your BingeScore: <%= current_user.bingescore(@show) %><br />
-            <%=
-                link_to 'Delete Rating',
-                show_user_rating_path(@show, current_user_rating(@show, current_user)),
-                method: :delete,
-                data: { confirm: "Delete rating for #{@show.title}?" },
-                class: 'btn waves-effect waves-light'
-            %>
-          </p>
-        </div>
     <% end %>
   </div>
   <div class="col s6">
