--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,7 +27,7 @@
           <td class="center-align">
             <%=
                 link_to 'Delete',
-                show_user_rating_path(rating.show, current_user_rating(rating.show, current_user)),
+                show_user_rating_path(rating.show, current_user.current_user_rating(rating.show)),
                 method: :delete,
                 data: { confirm: "Delete rating for #{rating.show.title}?" },
                 class: 'waves-effect waves-light btn-small'
