Adding API to seed file, adjusting show columns

--- a/app/views/admin/shows/_form.html.erb
+++ b/app/views/admin/shows/_form.html.erb
@@ -8,5 +8,8 @@
   <%= f.label      :runtime, 'Episode Runtime (in minutes)' %>
   <%= f.text_field :runtime %>
 
+  <%= f.label     :overview %>
+  <%= f.text_area :overview %>
+
   <%= f.submit class: 'btn waves-effect waves-light' %>
 <% end %>
