CSS work on Show show pages

--- a/app/views/admin/shows/show.html.erb
+++ b/app/views/admin/shows/show.html.erb
@@ -36,6 +36,6 @@
     <% end %>
   </div>
   <div class="col s6">
-    <p class="flow-text"><%= @show.overview %></p>
+    <p class="flow-text overview-text"><%= @show.overview %></p>
   </div>
 </div>
