--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -3,6 +3,16 @@ select {
   margin-bottom: 10px;
 }
 
+hr {
+   border: 0;
+   height: 1px;
+   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
+textarea {
+  height: 150px;
+}
+
 .poster-img {
   max-height: 525px;
 }
@@ -20,7 +30,23 @@ select {
   margin: auto;
 }
 
+.overview-text {
+  font-size: 1.2em;
+}
+
+.rating-text {
+  font-size: 1.3em
+}
+
+.no-borders {
+  border-width: 0;
+}
+
+.rating-table {
+  margin-bottom: 5px;
+}
+
 #genre-box {
-  width: 350px;
+  width: 100%;
   height: 200px;
 }
