--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -21,6 +21,10 @@
       <div id="stats-all">
         <table class="responsive-table rating-table">
           <tr class="no-borders">
+            <td>Total Ratings</td>
+            <td><%= @show.total_ratings %></td>
+          </tr>
+          <tr class="no-borders">
             <td>Average Review Score</td>
             <td><%= @show.avg_score %>/10</td>
           </tr>
