--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,8 +1,47 @@
-<div id="most-rated-shows">
-  <h6>Most Rated Shows</h6>
-  <% @most_rated_shows.each do |show| %>
-    <p>
-      <%= link_to show.title, show_path(show) %> (<%= show.year %>) - <%= show.total_ratings %> user ratings
-    </p>
-  <% end %>
+<div class="row">
+  <div class="col s4" id="most-rated-shows">
+    <table class="responsive-table rating-table">
+      <thead>
+        <th>Most Rated Shows</th>
+      </thead>
+      <tbody>
+        <% @most_rated_shows.each do |show| %>
+          <tr class="no-borders">
+            <td><%= link_to show.title, show_path(show)%> (<%= show.year %>)</td>
+            <td><%= show.total_ratings %> user ratings</td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <div class="col s4" id="top-shows-by-score">
+    <table class="responsive-table rating-table">
+      <thead>
+        <th>Top Shows By Score</th>
+      </thead>
+      <tbody>
+        <% @top_shows_by_score.each do |show| %>
+          <tr class="no-borders">
+            <td><%= link_to show.title, show_path(show)%> (<%= show.year %>)</td>
+            <td><%= show.avg_score %>/10</td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <div class="col s4" id="top-shows-by-bingecount">
+    <table class="responsive-table rating-table">
+      <thead>
+        <th>Top Shows By BingeCount</th>
+      </thead>
+      <tbody>
+        <% @top_shows_by_bingecount.each do |show| %>
+          <tr class="no-borders">
+            <td><%= link_to show.title, show_path(show)%> (<%= show.year %>)</td>
+            <td><%= show.avg_bingecount %> episodes</td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
