--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
-  <div class="col s4" id="top-shows-by-score">
-    <table class="responsive-table rating-table">
+  <div class="col l4" id="top-shows-by-score">
+    <table class="rating-table">
       <thead>
         <th>Top Shows By Score</th>
       </thead>
@@ -14,8 +14,8 @@
       </tbody>
     </table>
   </div>
-  <div class="col s4" id="top-shows-by-bingecount">
-    <table class="responsive-table rating-table">
+  <div class="col l4" id="top-shows-by-bingecount">
+    <table class="rating-table">
       <thead>
         <th>Top Shows By BingeCount</th>
       </thead>
@@ -29,8 +29,8 @@
       </tbody>
     </table>
   </div>
-  <div class="col s4" id="top-shows-by-bingescore">
-    <table class="responsive-table rating-table">
+  <div class="col l4" id="top-shows-by-bingescore">
+    <table class="rating-table">
       <thead>
         <th>Top Shows By BingeScore</th>
       </thead>
@@ -44,8 +44,8 @@
       </tbody>
     </table>
   </div>
-  <div class="col s4" id="most-rated-shows">
-    <table class="responsive-table rating-table">
+  <div class="col l4" id="most-rated-shows">
+    <table class="rating-table">
       <thead>
         <th>Most Rated Shows</th>
       </thead>
