--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -44,6 +44,8 @@
       </tbody>
     </table>
   </div>
+</div>
+<div class="row">
   <div class="col l4" id="most-rated-shows">
     <table class="rating-table">
       <thead>
