--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -3,8 +3,7 @@
 <% if @genre.shows.empty? %>
   <p class="center-align">There are currently no shows listed in this genre.</p>
 <% else %>
-  <ul class="collection with-header small-container">
-    <li class="collection-header"><h6>Shows in this Genre</h6></li>
+  <ul class="collection small-container">
     <% @genre.shows.each do |show| %>
       <%= link_to show.title, show_path(show), class: "collection-item" %>
     <% end %>
