logo for moviedb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,5 +66,6 @@
       <% end %>
       <%= yield %>
     </main>
+    <%= link_to image_tag('themoviedb.svg', id: 'movie-db-logo'), 'https://www.themoviedb.org/' %>
   </body>
 </html>
